--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.6.0",
     "ember-bootstrap": "^4.5.0",
+    "ember-bootstrap-nav-link": "^1.0.1",
     "ember-cli": "~3.22.0",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.22.1",
